--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -2366,6 +2366,7 @@ tech_reverse_advanced_dome: " "
 	tec_psionic_path.205.desc:0 "Regardless, we have explored where our new capacities can led us, and so, we will expand our minds and become more."
 	tec_psionic_path.205.desc.slow:0 "TO DO.\n$tec_psionic_path.205.desc$"
 	tec_psionic_path.205.desc.fast:0 "TO DO.\n$tec_psionic_path.205.desc$"
+	tec_psionic_path.205.desc.fallback:0 "TO DO.\n$tec_psionic_path.205.desc$"
 	tec_psionic_path.205.a:0 "Our true potential awaits."
 	tec_psionic_path.205.a.tooltip:0 "TO DO."
 	tec_psionic_path.205.b:0 "We will achieve the unthinkable..."
@@ -2768,9 +2769,9 @@ tech_reverse_advanced_dome: " "
 	tec_biopsionic_path.30040.desc.psionics:0 "The sheer power and perfection of our form keeps expanding beyond what is physical.\nThe very foundation of our own selves is now shacking by the power we have on what is beyond reality, on what conforms outer ones, and it is now changing our very selves."
 	tec_biopsionic_path.30040.desc.genetics:0 "The sheer power and perfection of our form keeps expanding beyond what is physical.\nThe very foundation of our own selves is now shacking by the power we have on what is beyond reality, beyond the limits genetic imposes on our bodies, and it is now changing our very selves."
 	tec_biopsionic_path.30040.a.psionics:0 "Inner power, inner growth"
-	tec_biopsionic_path.30040.a.psionics.tooltip:0 "The §YGrowth Penalty§! inherited by psionic capacities will be §GConverted§! into §GExtra Production§!."
+	tec_biopsionic_path.30040.a.psionics.tooltip:0 "The §YJob Upkeep Penalty§! inherited by psionic capacities will be §GConverted§! into §GExtra Production§!."
 	tec_biopsionic_path.30040.b.genetics:0 "We will shape our very selves"
-	tec_biopsionic_path.30040.b.genetics.tooltip:0 "The §YJob Upkeep§! inherited by psionic capacities will be §GInverted§! into §GPop Upkeep reduction§!."
+	tec_biopsionic_path.30040.b.genetics.tooltip:0 "The §YJob Upkeep Penalty§! inherited by psionic capacities will be §GConverted§! into §GPop Upkeep reduction§!."
 
 # 50% Pure of form/essence
 	tec_biopsionic_path.30050.name:0 "The Purest Form"
