--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -326,7 +326,12 @@
 		councilor_civic_tec_regular_researchers_labrats:0 "Main Experimenter"
 		councilor_civic_tec_regular_researchers_labrats_female:0 "$councilor_civic_tec_regular_researchers_labrats$"
 		councilor_civic_tec_regular_researchers_labrats_desc:0 "$TITLE$s devise the most unique ways of making test subject experiences as productive and ''interesting'' as possible."
-		councilor_civic_tec_regular_researchers_labrats_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_researchers_labrats_custom_modifier:0 "- $tec_loc_research_resources$ from £job_tec_labrat£ $job_tec_labrat$: §G+0.1§!\n- $tec_loc_cg$ Upkeep £job_tec_labrat£ $job_tec_labrat$: §R+0.05§!\n"
+
+		councilor_civic_tec_corporate_researchers_labrats:0 "Main Experimenter"
+		councilor_civic_tec_corporate_researchers_labrats_female:0 "$councilor_civic_tec_regular_researchers_labrats$"
+		councilor_civic_tec_corporate_researchers_labrats_desc:0 "$TITLE$s devise the most unique ways of making test subject experiences as productive and ''interesting'' as possible."
+		councilor_civic_tec_corporate_researchers_labrats_custom_modifier:0 "- $tec_loc_research_resources$ from £job_tec_labrat£ $job_tec_labrat$: §G+0.1§!\n- $tec_loc_cg$ Upkeep £job_tec_labrat£ $job_tec_labrat$: §R+0.05§!\n"
 
 		councilor_civic_tec_regular_researchers_diversifier:0 "TO DO"
 		councilor_civic_tec_regular_researchers_diversifier_female:0 "TO DO"
