--- a/localisation/english/zz_evolved_galcom_espionage_l_english.yml
+++ b/localisation/english/zz_evolved_galcom_espionage_l_english.yml
@@ -189,6 +189,42 @@
 
 
 # ------------------------------------------------- ESPIONAGE
+ # --------------- Modifiers
+	mod_tec_espionage_technological_effect_mult:0 "Technological Espionage Strenght"
+	mod_tec_espionage_biological_effect_mult:0 "Biological Espionage Strenght"
+	mod_tec_espionage_psionics_effect_mult:0 "Psychological Espionage Strenght"
+
+	mod_tec_espionage_infiltration_effect_mult:0 "Infiltration Espionage Strenght"
+	mod_tec_espionage_political_effect_mult:0 "Political Espionage Strenght"
+	mod_tec_espionage_sabotage_effect_mult:0 "Sabotage Espionage Strenght"
+	mod_tec_espionage_warcrime_effect_mult:0 "War Espionage Strenght"
+
+	mod_tec_espionage_explosiveweapons_effect_mult:0 "Demolition Espionage Strenght"
+	mod_tec_espionage_cyberweapons_effect_mult:0 "Cyberwarfare Espionage Strenght"
+	mod_tec_espionage_bioweapons_effect_mult:0 "Bioweaponized Espionage Strenght"
+	mod_tec_espionage_nanoweapons_effect_mult:0 "Nanoweaponized Espionage Strenght"
+	mod_tec_espionage_terrorweapons_effect_mult:0 "Terror Attack Strenght"
+
+	mod_tec_espionage_technological_defense_mult:0 "Technological Espionage Deflection"
+	mod_tec_espionage_biological_defense_mult:0 "Biological Espionage Deflection"
+	mod_tec_espionage_psionics_defense_mult:0 "Psychological Espionage Deflection"
+
+	mod_tec_espionage_infiltration_defense_mult:0 "Infiltration Espionage Deflection"
+	mod_tec_espionage_political_defense_mult:0 "Political Espionage Deflection"
+	mod_tec_espionage_sabotage_defense_mult:0 "Sabotage Espionage Deflection"
+	mod_tec_espionage_warcrime_defense_mult:0 "War Espionage Deflection"
+
+	mod_tec_espionage_explosiveweapons_defense_mult:0 "Demolition Espionage Deflection"
+	mod_tec_espionage_cyberweapons_defense_mult:0 "Cyberwarfare Espionage Deflection"
+	mod_tec_espionage_bioweapons_defense_mult:0 "Bioweaponized Espionage Deflection"
+	mod_tec_espionage_nanoweapons_defense_mult:0 "Nanoweaponized Espionage Deflection"
+	mod_tec_espionage_terrorweapons_defense_mult:0 "Terror Attack Deflection"
+
+	mod_tec_espionage_counterespionage_chance_mult:0 "Counterespionage Chance"
+	mod_tec_espionage_counterespionage_prevention_mult:0 "Counterespionage Deflection"
+	mod_tec_espionage_counterespionage_vendetta_mult:0 "Counterespionage Vendetta Strenght"
+	mod_tec_espionage_counterespionage_antivendetta_mult:0 "Counterespionage Vendetta Mitigation"
+ # /
  # --------------- Leader changes
 	leader_trait_tec_espionage_brainwashed:0 "Brainwashed"
 	leader_trait_tec_espionage_brainwashed_desc:1 "This leader had a near complete memory wipe and neural reconditioning, which, even with some secondary effects, ensure its loyalty to our cause."
