--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -26,7 +26,7 @@ l_english:
  # /
 
  # Utilities
-	tec_building_ascension_scaling:0 "The number of §Y$tec_loc_planet_ascensions$§! of this colony increase some of the effects of this building.\n\n"
+	tec_building_ascension_scaling:0 "\n\nThe number of §Y$tec_loc_planet_ascensions$§! of this colony increase some of the effects of this building.\n\n"
  # /
 
  # Job icons
