more error fixes

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -1049,6 +1049,9 @@ tech_reverse_advanced_dome: " "
 	situation_tec_gene_path_t1_stage_2:0 "II"
 	situation_tec_gene_path_t1_stage_3:0 "III"
 	situation_tec_gene_path_t1_stage_4:0 "IV"
+	situation_tec_gene_path_t1_stage_minus_1:0 "- I"
+	situation_tec_gene_path_t1_stage_minus_2:0 "- II"
+	situation_tec_gene_path_t1_stage_minus_3:0 "- III"
 
 	situation_approach_tec_gene_path_t1_neutral:0 "Standard Procedure"
 	situation_approach_tec_gene_path_t1_neutral_tooltip:0 "Iterative studies will ensure a safe and reliable progress in our investigation."
@@ -1147,6 +1150,7 @@ tech_reverse_advanced_dome: " "
 	situation_tec_cybernetic_path_t1_stage_2:0 "II"
 	situation_tec_cybernetic_path_t1_stage_3:0 "III"
 	situation_tec_cybernetic_path_t1_stage_4:0 "IV"
+	situation_tec_cybernetic_path_t1_stage_4:0 "V"
 
 	situation_approach_tec_cybernetic_path_t1_standard:0 "Initial Deployment"
 	situation_approach_tec_cybernetic_path_t1_standard_tooltip:0 "Regular cybernetic breakthroughs require a constant and methodical approach."
@@ -1239,6 +1243,8 @@ tech_reverse_advanced_dome: " "
 	situation_tec_synth_path_t1_stage_2:0 "II"
 	situation_tec_synth_path_t1_stage_3:0 "III"
 	situation_tec_synth_path_t1_stage_4:0 "IV"
+	situation_tec_synth_path_t1_stage_5:0 "V"
+	situation_tec_synth_path_t1_stage_6:0 "VI"
 
 	situation_approach_tec_synth_path_t1_notech:0 "Lacking Technology"
 	situation_approach_tec_synth_path_t1_notech_tooltip:0 "We are lacking a Key technology and so we can't continue this procedure.\nWe need to research both £engineering£ §YSynthetic Workers§! and £engineering£ §YSynthetic Leaders§! technologies to continue."
@@ -1410,6 +1416,7 @@ tech_reverse_advanced_dome: " "
 	situation_tec_machine_path_t1_fail_tooltip:0 "It is impossible for us to fail."
 	situation_tec_machine_path_t1_finish_tooltip:0 "If we complete this situation, we will improve our synthetic platforms."
 	situation_tec_machine_path_t1_monthly_change_tooltip:0 "The progress of this §YSituation§! depend on our approach and potential side-events appearing during the situation."
+	situation_tec_machine_path_t1_stage_0:0 "0"
 	situation_tec_machine_path_t1_stage_1:0 "I"
 	situation_tec_machine_path_t1_stage_2:0 "II"
 	situation_tec_machine_path_t1_stage_3:0 "III"
