Roadd chngs from R6+small (i forgot what) chngs

--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -708,7 +708,8 @@ l_english:
 	district_tec_hab_extraction_plural:0 "$district_tec_hab_extraction$s"
 	district_tec_hab_extraction_desc:0 "Large sections of the central orbital habitat are repurposed to coordinate the sub-orbitals and mining stations around the system, increasing their efficiency and allowing a proper transmission of manpower and resources amongsts each one."
 	district_tec_hab_extraction_effect_production:0 "This $tec_loc_district$ produce extra §Y$tec_loc_basic_resources$§! based on the the number of §YOrbitals§! of its type (£energy£ £minerals£), or §Y£building£ Hydroponic§! buildings (£food£)."
-	district_tec_hab_extraction_effect_buildings:0 "$t$- Increases the effects of §Y£building£ Habitat Orbital Buildings§!."
+	district_tec_hab_extraction_effect_buildings:0 ""
+	#$t$- Increases the effects of §Y£building£ Habitat Orbital Buildings§!."
 	district_tec_hab_extraction_effect_swap:0 "$t$- Replaceable via §Y$tec_loc_planet_decision$§!."
 	district_tec_hab_extraction_effect_orbitals:0 "\n§HCurrent Orbitals:§! $TABBED_NEW_LINE$ $tec_loc_energy$ §Y[solar_system.GetNumOrbitalsEnergy]/[solar_system.GetMaxOrbitalsEnergy]§! $TABBED_NEW_LINE$ $tec_loc_minerals$ §Y[solar_system.GetNumOrbitalsMining]/[solar_system.GetMaxOrbitalsMining]§!\n\n§HCurrent Hydroponic Boost:§! $TABBED_NEW_LINE$ $tec_loc_food$ +§Y[this.GetHydroponicNumbers]§!\n\n"
 
@@ -728,6 +729,15 @@ l_english:
 	district_tec_hab_food_effect_production:0 "This $tec_loc_district$ produce extra §Y$tec_loc_food$§! based on the the number of §Y£building£ Hydroponic§! buildings of its type (£food£), and the Habitat Upgrade level"
 	district_tec_hab_food_effect_buildings:0 "$t$- Increases the effects of §Y£building£ Food Orbital Buildings§!."
 	district_tec_hab_food_effect_orbitals:0 "\n§HCurrent Hydroponic Boost:§! $TABBED_NEW_LINE$ $tec_loc_food$ +§Y[this.GetHydroponicNumbers]§!\n\n"
+
+	# Utility
+	district_tec_hab_utility:0 "Utility District"
+	district_tec_hab_utility_plural:0 "$district_tec_hab_utility$"
+	district_tec_hab_utility_desc:0 "Large sections of the central orbital habitat are repurposed to coordinate the sub-orbitals and research stations around the system, increasing their efficiency and allowing a proper transmission of manpower and resources amongsts each one."
+	district_tec_hab_utility_effect_production:0 "This $tec_loc_district$ produce extra §Y$tec_loc_research_resources$§! based on the the number of §YOrbitals§! of its type (£trigger_tec_research£)"
+	district_tec_hab_utility_effect_buildings:0 ""
+	district_tec_hab_utility_effect_swap:0 "$t$- Replaceable via §Y$tec_loc_planet_decision$§!."
+	district_tec_hab_utility_effect_orbitals:0 "\n§HCurrent Orbitals:§! $TABBED_NEW_LINE$ $tec_loc_research$ §Y[solar_system.GetNumOrbitalsScience]/[solar_system.GetMaxOrbitalsScience]§!\n\n"
 
 	# Science
 	district_hab_science_effect_production:0 "This $tec_loc_district$ produce extra §Y$tec_loc_research_resources$§! based on the the number of §YOrbitals§! of its type (£minerals£)"
@@ -819,7 +829,7 @@ l_english:
 
 	building_tec_biopsionic_convergence:0 "Shrine of Convergence"
 	building_tec_biopsionic_convergence_desc:0 "These structures serve as a pathway and cornerstone for the necessary psionic powers required for a ritual of convergence, and so a place of pilgrinage for this important event."
-	building_TEC_BIOPSIO_ALLOW_CONVERGENCE:0 "This building allows the §YRitual of Convergence§! effect on this colony, and will produce extra £sr_zro£ §Yresources§! with each successful ritual."
+	building_tec_biopsionic_allow_convergence:0 "This building allows the §YRitual of Convergence§! effect on this colony, and will produce extra £sr_zro£ §Yresources§! with each successful ritual."
  # /
  # ------------------------------------------------- Cyberpsio
 	# Misc
@@ -849,7 +859,7 @@ l_english:
 		building_tec_cyberpsionic_extractor_plural:0 "Dimensional Extractors"
 		building_tec_cyberpsionic_extractor_desc:0 "This structure, made of exotic and powerful materials, harness residual anomalous energy into refined dust that can be used for state of the art cybernetic and psionic creations."
 
-		building_tec_cyberpsionic_extractor_entropy:0 "Total Empire Entropy: §R[tec_entropy_display]%§!\n\nThis £building£ §YBuilding§! has its production increased by §R$mod_tec_entropy$§!\nScaling Effect from Entropy: §G[tec_entropy_scaling]x§!"
+		building_tec_cyberpsionic_extractor_entropy:0 "Total Empire Entropy: §R[tec_entropy_display]%§!\n\nThis £building£ §YBuilding§! has its §Y$tec_loc_energy$§! production increased by §R$mod_tec_entropy$§!\nScaling Effect from Entropy: §G[tec_entropy_scaling]x§!"
 		building_tec_cyberpsionic_extractor_danger_0:0 "$building_tec_cyberpsionic_extractor_entropy$\nRisk: §BNon existant§!"
 		building_tec_cyberpsionic_extractor_danger_1:0 "$building_tec_cyberpsionic_extractor_entropy$\nRisk: §GLow§!"
 		building_tec_cyberpsionic_extractor_danger_2:0 "$building_tec_cyberpsionic_extractor_entropy$\nRisk: §YModerate§!"
