--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -94,7 +94,7 @@
 	job_bath_attendant_hive_effect_desc: "$job_toxic_baths_effect_hive_desc$"
 	job_bath_attendant_machine_effect_desc: "$job_toxic_baths_effect_machine_desc$"
 
-	job_roboticist_effect_desc:0 "£job_roboticist£ $job_roboticist_plural$ turn [root.GetTecRoboticistUpkeep] into new £pop£ §YRobot Pops§!"
+	job_roboticist_effect_desc:0 "£job_roboticist£ $job_roboticist_plural$ turn [root.tec_roboticist_upkeep] into new £pop£ §YRobot Pops§!"
 
 	job_culture_worker_effect_desc:0 "£job_culture_worker£ $job_culture_worker_plural$ turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_unity$§!$tec_culture_worker_cleanup$ and £mod_ethic_attraction_mult£ §Y$MOD_POP_GOVERNMENT_ETHIC_ATTRACTION$§!."
 	tec_culture_worker_cleanup:0 "[Owner.tec_cw_mat_bonus][Owner.tec_cw_mil_bonus][Owner.tec_cw_auth_bonus][Owner.tec_cw_xen_bonus][Owner.tec_cw_eco_bonus][Owner.tec_cw_comp_bonus][Owner.tec_cw_eli_bonus]"
