--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -1594,8 +1594,8 @@
 # ------------------------------------------------------------ §S£tec_civic_challenging£§!
  # Vanilla
 	civic_inwards_perfection:0 "§S£tec_civic_challenging£§!Inward Perfection"
-	civic_inwards_perfection_desc:0 "['concept_tec_challenging_civic']\n['concept_tec_restricted_diplomacy_civic']\n\nThis calm and pacifist society has little use for strangers who do not understand their way of life. More than anything, they would prefer to be left alone.\n\n"
-		civic_inwards_perfection_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£opinion£ Restrictive Diplomacy§!\nSeveral diplomatic options are restricted - ['concept_tec_civic_inwards_perfection_effects']"
+	civic_inwards_perfection_desc:0 "['concept_tec_challenging_civic']\n['concept_tec_restricted_diplomacy_civic']\n\nThis calm and pacifist society has little use for strangers who do not understand their way of life. More than anything, they would prefer to be left alone."
+		civic_inward_perfection_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£opinion£ Restrictive Diplomacy§!\nSeveral diplomatic options are restricted - ['concept_tec_civic_inwards_perfection_effects']"
 		concept_tec_civic_inwards_perfection_effects:0 "£opinion£ Better to be left alone"
 		concept_tec_civic_inwards_perfection_effects_desc:0 "Diplomatic options altered:\n$t$§H- Cannot have §YRivals§!\n$t$§H- Cannot form §YDefensive Pacts§!\n$t$§H- Cannot form §YMigration Treaties§!\n$t$§H- Cannot form §YResearch Agreements§!\n$t$§H- Cannot form §YCommercial Pacts§!\n$t$§H- Cannot §YGuarantee Independence§!\n$t$§H- Cannot join §YFederations§!\n$t$§H- Cannot §YInfiltrate§! primitives\n$t$§H- Cannot have forced §YSubjects§!\n$t$§H- Cannot use §YUnrestricted Wars§! policy."
 		#OLD_civic_inwards_perfection_tooltip:0 "Cannot have §YRivals§!\nCannot form §YDefensive Pacts§!\nCannot form §YMigration Treaties§!\nCannot form §YResearch Agreements§!\nCannot form §YCommercial Pacts§!\nCannot §YGuarantee Independence§!\nCannot join §YFederations§!\nCannot §YInfiltrate§! primitives\nCannot have forced §YSubjects§!\nCannot use §YUnrestricted Wars§! policy.\n\n"
