--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -187,6 +187,11 @@
 		councilor_civic_tec_regular_eco_keepers_custom_modifier:0 "NOT USED"
 		# Improve loc ^
 
+		councilor_civic_tec_regular_eco_preservers:0 "Ecological Expert"
+		councilor_civic_tec_regular_eco_preservers_female:0 "$councilor_civic_tec_regular_eco_preservers$"
+		councilor_civic_tec_regular_eco_preservers_desc:0 "The $TITLE$ studies ways to ensure natural boons are respected, preserved and maintained with care."
+		councilor_civic_tec_regular_eco_preservers_custom_modifier:0 "NOT USED"
+
 		councilor_civic_tec_regular_eco_engineers:0 "Environmental Architect"
 		councilor_civic_tec_regular_eco_engineers_female:0 "$councilor_civic_tec_regular_eco_engineers$"
 		councilor_civic_tec_regular_eco_engineers_desc:0 "The $TITLE$ ensures the reformation and recreation of terrains and spaces is perfect or close to perfection."
