--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -798,6 +798,19 @@ l_english:
 	decision_tec_habitat_unlock_farming_effects:0 "Adds the £district£ $district_tec_hab_food$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_food$§!, based on the number of £building£ Hydroponic Buildings, and provide §Y£job_farmer£ Agricultural§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_tec_hab_food$.§!\n\n§RThis decision can't be undone§!"
 	decision_tec_habitat_unlock_farming_effects_replace_extraction:0 "Adds the £district£ $district_tec_hab_food$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_food$§!, based on the number of £building£ Hydroponic Buildings, and provide §Y£job_farmer£ Agricultural§! jobs.\n§HCompletely replaces and removes the ability to create £district£ $district_tec_hab_extraction$.§!\n\n§RThis decision cannot be undone§!"
 
+ decision_tec_habitat_unlock_trade:0 "Upgrade Trade Module"
+ decision_tec_habitat_unlock_trade_desc:0 "--"
+ decision_tec_habitat_unlock_trade_effects:0 "Adds the £district£ $district_hab_commercial$ as available Orbital Habitat district.\nThis district provide §Y$tec_loc_trade$§! jobs.\n§HReplaces the £district£ $district_tec_hab_utility$ entirely.§!\n\n§RThis decision can't be undone§!"
+
+ decision_tec_habitat_unlock_research:0 "Upgrade Research Module"
+ decision_tec_habitat_unlock_research_desc:0 "--"
+ decision_tec_habitat_unlock_research_effects:0 "Adds the £district£ $district_hab_research$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_research_resources$§!, based on the number of £trigger_tec_research£ Research Orbitals, and provide §Y£job_researcher£ Researcher§! jobs.\n§HReplaces the £district£ $district_tec_hab_utility$ entirely.§!\n\n§RThis decision can't be undone§!"
+
+ decision_tec_habitat_unlock_leisure:0 "Upgrade Leisure Module"
+ decision_tec_habitat_unlock_leisure_desc:0 "--"
+ decision_tec_habitat_unlock_leisure_effects:0 "Adds the £district£ $district_hab_cultural$ as available Orbital Habitat district.\nThis district provide §Y$tec_loc_amenity$§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_hab_cultural$.§!\n\n§RThis decision can't be undone§!"
+ decision_tec_habitat_unlock_leisure_effects_replace_extraction:0 "Adds the £district£ $district_hab_cultural$ as available Orbital Habitat district.\nThis district provide §Y$tec_loc_amenity$§! jobs.\n§HCompletely replaces and removes the ability to create £district£ $district_tec_hab_extraction$.§!\n\n§RThis decision cannot be undone§!"
+
 
 	decision_tec_orbital_autobuilder_focus_minor:0 "Automate Orbital Assembly - Minor Orbitals"
 	decision_tec_orbital_autobuilder_focus_minor_desc:0 "Priorizes the production of §YMinor Orbitals§! on suitable planets."
@@ -847,11 +860,11 @@ l_english:
 		building_tec_cyberpsionic_extractor_3:0 "Dimensional Extractor"
 		building_tec_cyberpsionic_extractor_3_desc:0 "This advanced structure, made of exotic and powerful materials, drains unfathomable amounts of anomalous energy from other dimensions into refined dust that can be used for state of the art cybernetic and psionic creations."
 
-		building_TEC_CYBERPSIONIC_DANGER_1:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Ynominal§! and there is no risk involved."
-		building_TEC_CYBERPSIONIC_DANGER_2:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Gincreased§! and there is no risk involved."
-		building_TEC_CYBERPSIONIC_DANGER_3:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Gincreased§!, but the §Rrisk§! of dimensional incursions is §Rgrowing§!."
-		building_TEC_CYBERPSIONIC_DANGER_4:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Ghighly increased§!, but the §Rrisk§! of dimensional incursions is §Renormous§!."
-		building_TEC_CYBERPSIONIC_DANGER_5:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Ghighly increased§!, and so the §Rrisk of attack§! of psionic entities against our empire."
+		building_tec_cyberpsionic_danger_1:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Ynominal§! and there is no risk involved."
+		building_tec_cyberpsionic_danger_2:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Gincreased§! and there is no risk involved."
+		building_tec_cyberpsionic_danger_3:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Gincreased§!, but the §Rrisk§! of dimensional incursions is §Rgrowing§!."
+		building_tec_cyberpsionic_danger_4:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Ghighly increased§!, but the §Rrisk§! of dimensional incursions is §Renormous§!."
+		building_tec_cyberpsionic_danger_5:0 "We have a total of §Y[root.owner.tec_dimensional_extraction_buildings_ref]§! Dimensional Extraction buildings. Extraction is §Ghighly increased§!, and so the §Rrisk of attack§! of psionic entities against our empire."
 	#/
 
 	# New extractor
