--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -998,6 +998,13 @@
 	concept_tec_worker_job_tec_druid_plural_icon: "£job_tec_druid£ $job_tec_druid_plural$"
 	concept_tec_worker_job_tec_druid_desc: "§L$job_tec_druid_desc$§!\n\n$job_tec_druid_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_tec_druids_alias']\n\n$tec_loc_amenities$: §G+3§!\n$tec_loc_habitability$: §G+5%§!\n$tec_loc_c_produces$: §Y£unity£ 5§!"
 
+	concept_tec_worker_job_ranger: "$job_ranger$"
+	concept_tec_worker_job_ranger_alias: "$job_ranger$"
+	concept_tec_worker_job_ranger_icon: "£job_ranger£ $job_ranger$"
+	concept_tec_worker_job_ranger_plural: "$job_ranger_plural$"
+	concept_tec_worker_job_ranger_plural_icon: "£job_ranger£ $job_ranger_plural$"
+	concept_tec_worker_job_ranger_desc: "§L$job_ranger_desc$§!\n\n$job_ranger_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_rangers_alias']\n\nResources vary based on the planet £blocker£ Blockers and Features"
+
 	concept_tec_worker_job_tec_memorialist: "$job_tec_memorialist$"
 	concept_tec_worker_job_tec_memorialist_alias: "$job_tec_memorialist$"
 	concept_tec_worker_job_tec_memorialist_icon: "£job_tec_memorialist£ $job_tec_memorialist$"
