--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -31,7 +31,7 @@
  tr_tec_outreach_finish_effect:4 ""
 
  tr_tec_outreach_finish_terravore:0 "Outreach Traditions Finished"
- tr_tec_outreach_finish_terravore_tooltip:4 "When an habitable planet is §YCompletely Consumed§!, up to §G5§! pops of the main species will be created on the §YCapital§!.\n\n"
+ tr_tec_outreach_finish_terravore_tooltip:4 "When an habitable planet is §YCompletely Consumed§!, up to extra §G5§! pops of the main species will be created on the §YCapital§!.\n\n"
  tr_tec_outreach_finish_terravore_effect:4 ""
 
  tr_tec_outreach_1:0 "Pioneers of a New Home"
