--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -161,8 +161,20 @@
 # MECHANICS replaces
 # ------------------------------------------------------------
 # habitat changes
-	habitat_0_CONSTRUCTION_INFO_DELAYED:4 "A Habitat can only house habitat-specific £building£ §YBuildings§!. If built in orbit over a planet with §Y$tec_loc_minerals$§!, §Y$tec_loc_energy$§!, or §Y$tec_loc_research_resources$§! deposits, special §Y$tec_loc_districts$§! will be available. Habitats built in orbit of planets without usable deposits will use the spared space for hydroponic £food£ §YFood Districts§! "
+	#habitat_0_CONSTRUCTION_INFO_DELAYED:4 "A Habitat can only house habitat-specific £building£ §YBuildings§!. If built in orbit over a planet with §Y$tec_loc_minerals$§!, §Y$tec_loc_energy$§!, or §Y$tec_loc_research_resources$§! deposits, special §Y$tec_loc_districts$§! will be available. Habitats built in orbit of planets without usable deposits will use the spared space for hydroponic £food£ §YFood Districts§! "
  
+	#habitat_0_MEGASTRUCTURE_DETAILS:2 "§HHabitat§!\nAn §Y$pc_habitat$§! is a self-sustaining modular space station designed for permanent habitation."
+	#habitat_0_CONSTRUCTION_INFO_DELAYED:5 "A §Y$major_orbital$§! will also be constructed, granting:\n$t$- $major_orbital_effect$"
+	#habitat_0:0 "Habitat"
+	#habitat_0_DESC:0 "A habitation station that orbits an uninhabitable planet, capable of housing several §HPops§! and §HBuildings§! away from the surface."
+
+	habitat_central_complex: "Habitat Central Complex"
+	habitat_central_complex_plural: "Habitat Central Complexes"
+	habitat_central_complex_DESC: "The central orbital of a §Y$habitat_complex$§!, capable of housing several £pop£ §YPops§! and providing space for £building£ §YBuildings§! and £district£ §YDistricts§! in orbit of uninhabitable planets.\nHighly modular, allow the customization of several districts after its construction."
+	habitat_central_complex_MEGASTRUCTURE_DETAILS: "A §Y$habitat_complex$§! is a collection of self-sustaining orbitals designed for permanent habitation."
+	habitat_central_complex_CONSTRUCTION_INFO_DELAYED: "$REQUIREMENTS_HEADER$ $major_orbital_requirements$ \n\n$EFFECTS_HEADER$ $NEW_LINE$- A Colonisable (Size: £planetsize£ 6) §YHabitat§! will be created. $NEW_LINE$- $habitat_0_CONSTRUCTION_INFO_DELAYED$"
+
+
 # DEPOSITS replaces
 # ------------------------------------------------------------
 	mod_building_crystal_mines_max:0 "Allows £building£ $building_crystal_mines$.\nMax £rare_crystals£ Rare Crystal Mining Jobs"
