--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -748,6 +748,9 @@
 
 	ap_defender_of_the_galaxy:0 "Defender of the Galaxy"
 	ap_defender_of_the_galaxy_desc:0 "As star nations vie with one another in petty disputes, sinister forces of unimaginable power are arraying themselves against all sapient life. Who will protect us?"
+	ap_defender_of_the_galaxy_gigas:0 "Defender of the Galaxy"
+	ap_defender_of_the_galaxy_gigas_desc:0 "As star nations vie with one another in petty disputes, sinister forces of unimaginable power are arraying themselves against all sapient life. Who will protect us?"
+
 	tec_dotg_bonus:0 "§YUnlocks ''Galactic Defense'' Federation§!"
 	tec_dotg_bonus_effects:0 "§EGalactic Defense§! federations have special perks that boost the empires capacities against some kinds of menaces and provides access to §Esome rare technologies§!, at the cost of a §Rreduced damage§! to other empires.\n\n§YEach Defender of the Galaxy aspirant empire who joins the federation will greatly boost the federation experience, while each regular empire joining will reduce the empire damage malus.§!"
 
