--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -181,52 +181,62 @@ l_english:
  # /
  # ------------------------------------------------- Machine World
 	district_tec_machine_arcology_housing:0 "Allocation Nexus"
-	district_tec_machine_arcology_housing_plural:0 "$district_tec_machine_maintenance$s"
-	district_tec_machine_arcology_housing_desc:0 "TO DO"
+	district_tec_machine_arcology_housing_plural:0 "$district_tec_machine_arcology_housing$s"
+	district_tec_machine_arcology_housing_desc:0 "Several facilities suited for easy drone storage and maintenance, restoration and stand-by of autonomous units."
 	# Group 0
+		# Robot Assembly
 		district_tec_machine_arcology_assembly:0 "Assembly Line"
-		district_tec_machine_arcology_assembly_plural:0 "$district_tec_machine_assembly$s"
-		district_tec_machine_arcology_assembly_desc:0 "TO DO"
+		district_tec_machine_arcology_assembly_plural:0 "$district_tec_machine_arcology_assembly$s"
+		district_tec_machine_arcology_assembly_desc:0 "A large region of the planet destined to suit millions of self-assembling patterns in a perfected, autonomous line of drone production."
 
+		# Organic Assembly
 		district_tec_machine_arcology_cloning:0 "Genesis Line"
-		district_tec_machine_arcology_cloning_plural:0 "$district_tec_machine_cloning$s"
-		district_tec_machine_arcology_cloning_desc:0 "TO DO"
+		district_tec_machine_arcology_cloning_plural:0 "$district_tec_machine_arcology_cloning$s"
+		district_tec_machine_arcology_cloning_desc:0 "A large region of the planet destined to suit millions of organic development pods, where genetic material corrections and nano-production of organic tissue take place."
 	# /
 	# Group 1
+		# Alloys
 		district_tec_machine_arcology_foundry:0 "Fabrication Sector"
-		district_tec_machine_arcology_foundry_plural:0 "$district_tec_machine_foundry$s"
-		district_tec_machine_arcology_foundry_desc:0 "TO DO"
+		district_tec_machine_arcology_foundry_plural:0 "$district_tec_machine_arcology_foundry$s"
+		district_tec_machine_arcology_foundry_desc:0 "Endless fabricators converting useful basic materials into dense refined alloys for posterior use."
+
+		# CG
+		district_tec_machine_arcology_consumer:0 "Fabrication Sector"
+		district_tec_machine_arcology_consumer_plural:0 "$district_tec_machine_arcology_foundry$s"
+		district_tec_machine_arcology_consumer_desc:0 "TO DO"
 
 		district_tec_machine_arcology_research:0 "Technological Sector"
-		district_tec_machine_arcology_research_plural:0 "$district_tec_machine_research$s"
+		district_tec_machine_arcology_research_plural:0 "$district_tec_machine_arcology_research$s"
 		district_tec_machine_arcology_research_desc:0 "TO DO"
 	# /
 	# Group 2
 		district_tec_machine_arcology_unity:0 "Development Sector"
-		district_tec_machine_arcology_unity_plural:0 "$district_tec_machine_unity$s"
+		district_tec_machine_arcology_unity_plural:0 "$district_tec_machine_arcology_unity$s"
 		district_tec_machine_arcology_unity_desc:0 "TO DO"
 
 		district_tec_machine_arcology_processing:0 "Processing Sector"
-		district_tec_machine_arcology_processing_plural:0 "$district_tec_machine_processing$s"
+		district_tec_machine_arcology_processing_plural:0 "$district_tec_machine_arcology_processing$s"
 		district_tec_machine_arcology_processing_desc:0 "TO DO"
 	# /
 	# Group 3
 		district_tec_machine_arcology_maintenance:0 "Maintenance Sector"
-		district_tec_machine_arcology_maintenance_plural:0 "$district_tec_machine_maintenance$s"
+		district_tec_machine_arcology_maintenance_plural:0 "$district_tec_machine_arcology_maintenance$s"
 		district_tec_machine_arcology_maintenance_desc:0 "TO DO"
 	# /
  # /
  # ------------------------------------------------- Hive World
-	district_tec_hive_arcology_housing:0 "Dwelling Chambers"
+	district_tec_hive_arcology_housing:0 "Dwelling Chamber"
 	district_tec_hive_arcology_housing_plural:0 "$district_tec_hive_arcology_housing$s"
 	district_tec_hive_arcology_housing_desc:0 "TO DO"
 	# Group 0
 		district_tec_hive_arcology_assembly:0 "Gestation Chambers"
 		district_tec_hive_arcology_assembly_plural:0 "$district_tec_hive_arcology_assembly$s"
 		district_tec_hive_arcology_assembly_desc:0 "TO DO"
+
+		district_tec_hive_arcology_assembly_scaling:0 "This district is restricted by the $tec_loc_capital_tier$ and $tec_loc_planet_ascensions$"
 	# /
 	# Group 1
-		district_tec_hive_arcology_foundry:0 "Industrial Chambers"
+		district_tec_hive_arcology_foundry:0 "Industrial Chamber"
 		district_tec_hive_arcology_foundry_plural:0 "$district_tec_hive_arcology_foundry$s"
 		district_tec_hive_arcology_foundry_desc:0 "TO DO"
 
@@ -235,12 +245,16 @@ l_english:
 		district_tec_hive_arcology_research_desc:0 "TO DO"
 	# /
 	# Group 2
-		district_tec_hive_arcology_unity:0 "Connectivity Chambers"
+		district_tec_hive_arcology_unity:0 "Connectivity Chamber"
 		district_tec_hive_arcology_unity_plural:0 "$district_tec_hive_arcology_unity$s"
 		district_tec_hive_arcology_unity_desc:0 "TO DO"
+
+		district_tec_hive_arcology_naval:0 "Warfare Chamber"
+		district_tec_hive_arcology_naval_plural:0 "$district_tec_hive_arcology_warfare$s"
+		district_tec_hive_arcology_naval_desc:0 "TO DO"
 	# /
 	# Group 3
-		district_tec_hive_arcology_maintenance:0 "Nurturing Chambers"
+		district_tec_hive_arcology_maintenance:0 "Nurturing Chamber"
 		district_tec_hive_arcology_maintenance_plural:0 "$district_tec_hive_arcology_maintenance$s"
 		district_tec_hive_arcology_maintenance_desc:0 "TO DO"
 	# /
@@ -785,7 +799,7 @@ l_english:
  # District decisions
 	decision_tec_habitat_unlock_generator:0 "Upgrade Orbital Generators"
 	decision_tec_habitat_unlock_generator_desc:0 "--"
-	decision_tec_habitat_unlock_generator_effects:0 "Adds the £district£ $district_hab_energy$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_energy$§!, based on the number of £minerals£ Energy Orbitals, and provide §Y£job_technician£ Technician§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_hab_energy$.§!\n\n§RThis decision can't be undone§!"
+	decision_tec_habitat_unlock_generator_effects:0 "Adds the £district£ $district_hab_energy$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_energy$§!, based on the number of $tec_loc_energy$ Orbitals, and provide §Y£job_technician£ Technician§! jobs.\n§HReplaces a third of the £district£ $district_tec_hab_extraction$ with £district£ $district_hab_energy$.§!\n\n§RThis decision can't be undone§!"
 	decision_tec_habitat_unlock_generator_effects_replace_extraction:0 "Adds the £district£ $district_hab_energy$ as available Orbital Habitat district.\nThis district produces §Y$tec_loc_energy$§!, based on the number of £minerals£ Energy Orbitals, and provide §Y£job_technician£ Technician§! jobs.\n§HCompletely replaces and removes the ability to create £district£ $district_tec_hab_extraction$.§!\n\n§RThis decision can't be undone§!"
 
 	decision_tec_habitat_unlock_mining:0 "Upgrade Orbital Mining Bays"
