--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -2,7 +2,7 @@
 
 # ------------------------------------------------- Adaptability
  tr_adaptability_finish_desc:0 "Unlocks the §Y$decision_prospect$§! decision, which allows us to prospect for an additional resource deposit once on our planets.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YStatecraft§! will be available.§!\n"
- tr_adaptability_void_finish_desc:0 "Unlocks the §Y$decision_prospect_void$§! decision, which allows us to prospect for additional resources in orbit of our habitats.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YStatecraft§! will be available.§!\n"
+ tr_adaptability_void_finish_desc:0 "Resources from Habitat Planetary Features: §G+50%§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YStatecraft§! will be available.§!\n"
 
 # ------------------------------------------------- Diplomacy
  tr_diplomacy_diplomatic_networking_desc:0 "Embassies produce §G+3§! §Y$tec_loc_unity$§!, scaling up to §G+10§! based on the empire £diplo_weight£ §Y$diplomatic_weight$§!."
