fixes and more fixes

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -716,7 +716,7 @@
 		civic_selective_kinship_desc:0 "['concept_tec_feature_civic']\n\nIn an uncertain universe, only kin can be trusted. This civilization is selective about the species it defines as equals."
 		civic_selective_kinship_tooltip:0 "$tec_loc_c_unlocks_feature$ §H£opinion£ Trust not the Xeno§!\nOpinion of Empires with shared ['concept_species_class']: §G+100§!\nOpinion of other Empires: §R-50§!\n£pops£ §YPops§! of our §YSpecies Class§! have Full Citizenship\nOther £pops£ §YPops§! are barred from Full Citizenship"
 
-		civic_tec_corporate_selective_kinship:0 "§L£tec_civic_feature£§!Bussiness Kinship"
+		civic_tec_corporate_selective_kinship:0 "§L£tec_civic_feature£§!Business Kinship"
 		civic_tec_corporate_selective_kinship_desc:0 "['concept_tec_feature_civic']\n\nIn an uncertain universe, only kin can be trusted. This corporation is selective about the species it defines as suitable for business."
 		civic_tec_corporate_selective_kinship_tooltip:0 "$civic_selective_kinship_tooltip$"
 	# /
